# minimal-os-in-rust

./: Cargo.toml  Makefile
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
