[package]
name = "minimal-os-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.5.0"
pic8259 = "0.10.3"
spin = "0.9.6"
volatile = "0.2.6"
x86_64 = "0.14.10"
